// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 hxVKcs InputBlock__TextInputContainer-sc-1bjt58v-0 FyZOH"
  id="input block"
  rows={null}
>
  <label
    className="Typography__StyledLabel-sc-19auepv-0 jOsHCn"
    cursor="pointer"
    fontSize="0.875rem"
    fontWeight={400}
    htmlFor={null}
    letterSpacing="1px"
    onClick={null}
  >
    Input Block ( Defaults to a standard Text Input )
  </label>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 hxVKcs"
    id={null}
    rows={null}
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 hxVKcs TextInput__TextInputContainer-sc-1fep8p8-0 cXvfWM"
      id="ID 1_container"
      rows={null}
    >
      <input
        autoComplete="off"
        className="TextInput__Input-sc-1fep8p8-3 eFFcpr"
        cols=""
        disabled={false}
        id="ID 1"
        list={null}
        name="ID 1"
        onBlur={null}
        onChange={null}
        onFocus={null}
        onKeyPress={null}
        onKeyUp={null}
        pattern="[A-Za-z]{3}"
        placeholder="Placeholder 1"
        rows=""
        type="text"
      />
    </section>
  </section>
  <p
    className="Typography__Paragraph-sc-19auepv-3 dAoeoh"
    fontSize="0.75rem"
    fontWeight={400}
    id={null}
    letterSpacing="0.4px"
  >
    Play with Knobs to see what this baby can do!
  </p>
</section>
`;

exports[` 2`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 ggzTnl"
  id={null}
  rows={null}
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 hxVKcs InputBlock__TextInputContainer-sc-1bjt58v-0 FyZOH"
    id={null}
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 hdGJrJ"
      cursor="pointer"
      fontSize="0.875rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="1px"
      onClick={null}
    >
      Input Block ( Required )
    </label>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 hxVKcs"
      id={null}
      rows={null}
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 hxVKcs TextInput__TextInputContainer-sc-1fep8p8-0 cXvfWM"
        id="ID 1_container"
        rows={null}
      >
        <input
          autoComplete="off"
          className="TextInput__Input-sc-1fep8p8-3 eFFcpr"
          cols=""
          disabled={false}
          id="ID 1"
          list={null}
          name="ID 1"
          onBlur={null}
          onChange={null}
          onFocus={null}
          onKeyPress={null}
          onKeyUp={null}
          pattern="[A-Za-z]{3}"
          placeholder="Placeholder 1"
          rows=""
          type="text"
        />
      </section>
    </section>
    <p
      className="Typography__Paragraph-sc-19auepv-3 dAoeoh"
      fontSize="0.75rem"
      fontWeight={400}
      id={null}
      letterSpacing="0.4px"
    >
      Hang in there, buddy, I'm here to help!
    </p>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 hxVKcs InputBlock__TextInputContainer-sc-1bjt58v-0 jmneKy"
    id={null}
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 jOsHCn"
      cursor="pointer"
      fontSize="0.875rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="1px"
      onClick={null}
    >
      Input Block ( Error )
    </label>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 hxVKcs"
      id={null}
      rows={null}
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 hxVKcs TextInput__TextInputContainer-sc-1fep8p8-0 hDCKnW"
        id="ID 1_container"
        rows={null}
      >
        <input
          autoComplete="off"
          className="TextInput__Input-sc-1fep8p8-3 joxTLe"
          cols=""
          disabled={false}
          id="ID 1"
          list={null}
          name="ID 1"
          onBlur={null}
          onChange={null}
          onFocus={null}
          onKeyPress={null}
          onKeyUp={null}
          pattern="[A-Za-z]{3}"
          placeholder="Placeholder 1"
          rows=""
          type="text"
        />
      </section>
    </section>
    <p
      className="Typography__Paragraph-sc-19auepv-3 dAoeoh"
      fontSize="0.75rem"
      fontWeight={400}
      id={null}
      letterSpacing="0.4px"
    >
      Hang in there, buddy, I'm here to help!
    </p>
    <section
      className="InputBlock__MessageContainer-sc-1bjt58v-2 eDVrgT"
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 dAoeoh"
        fontSize="0.75rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.4px"
      >
        Don't sweat it...we can fix this!
      </p>
    </section>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 hxVKcs InputBlock__TextInputContainer-sc-1bjt58v-0 FyZOH"
    id={null}
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 jOsHCn"
      cursor="pointer"
      fontSize="0.875rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="1px"
      onClick={null}
    >
      Input Block ( Disabled )
    </label>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 hxVKcs"
      id={null}
      rows={null}
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 hxVKcs TextInput__TextInputContainer-sc-1fep8p8-0 fHxLCQ"
        id="ID 1_container"
        rows={null}
      >
        <input
          autoComplete="off"
          className="TextInput__Input-sc-1fep8p8-3 bOPpQf"
          cols=""
          disabled={true}
          id="ID 1"
          list={null}
          name="ID 1"
          onBlur={null}
          onChange={null}
          onFocus={null}
          onKeyPress={null}
          onKeyUp={null}
          pattern="[A-Za-z]{3}"
          placeholder="Placeholder 1"
          rows=""
          type="text"
        />
      </section>
    </section>
    <p
      className="Typography__Paragraph-sc-19auepv-3 dAoeoh"
      fontSize="0.75rem"
      fontWeight={400}
      id={null}
      letterSpacing="0.4px"
    >
      Hang in there, buddy, I'm here to help!
    </p>
  </section>
</section>
`;

exports[` 3`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 ggzTnl"
  id={null}
  rows={null}
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 hxVKcs InputBlock__TextInputContainer-sc-1bjt58v-0 FyZOH"
    id={null}
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 jOsHCn"
      cursor="pointer"
      fontSize="0.875rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="1px"
      onClick={null}
    >
      Input Block ( 2 Inputs )
    </label>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kNWtEr"
      id={null}
      rows={null}
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 hxVKcs TextInput__TextInputContainer-sc-1fep8p8-0 cXvfWM"
        id="ID 1_container"
        rows={null}
      >
        <input
          autoComplete="off"
          className="TextInput__Input-sc-1fep8p8-3 eFFcpr"
          cols=""
          disabled={false}
          id="ID 1"
          list={null}
          name="ID 1"
          onBlur={null}
          onChange={null}
          onFocus={null}
          onKeyPress={null}
          onKeyUp={null}
          pattern={null}
          placeholder="Placeholder 1"
          rows=""
          type="text"
        />
      </section>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 hxVKcs TextInput__TextInputContainer-sc-1fep8p8-0 cXvfWM"
        id="ID 2_container"
        rows={null}
      >
        <input
          autoComplete="off"
          className="TextInput__Input-sc-1fep8p8-3 eFFcpr"
          cols=""
          disabled={false}
          id="ID 2"
          list={null}
          name="ID 2"
          onBlur={null}
          onChange={null}
          onFocus={null}
          onKeyPress={null}
          onKeyUp={null}
          pattern={null}
          placeholder="Placeholder 2"
          rows=""
          type="text"
        />
      </section>
    </section>
    <p
      className="Typography__Paragraph-sc-19auepv-3 dAoeoh"
      fontSize="0.75rem"
      fontWeight={400}
      id={null}
      letterSpacing="0.4px"
    >
      Hang in there, buddy, I'm here to help!
    </p>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 hxVKcs InputBlock__TextInputContainer-sc-1bjt58v-0 FyZOH"
    id={null}
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 jOsHCn"
      cursor="pointer"
      fontSize="0.875rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="1px"
      onClick={null}
    >
      Input Block ( 3 Inputs )
    </label>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 idCxbu"
      id={null}
      rows={null}
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 hxVKcs TextInput__TextInputContainer-sc-1fep8p8-0 cXvfWM"
        id="ID 1_container"
        rows={null}
      >
        <input
          autoComplete="off"
          className="TextInput__Input-sc-1fep8p8-3 eFFcpr"
          cols=""
          disabled={false}
          id="ID 1"
          list={null}
          name="ID 1"
          onBlur={null}
          onChange={null}
          onFocus={null}
          onKeyPress={null}
          onKeyUp={null}
          pattern={null}
          placeholder="Placeholder 1"
          rows=""
          type="text"
        />
      </section>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 hxVKcs TextInput__TextInputContainer-sc-1fep8p8-0 cXvfWM"
        id="ID 2_container"
        rows={null}
      >
        <input
          autoComplete="off"
          className="TextInput__Input-sc-1fep8p8-3 eFFcpr"
          cols=""
          disabled={false}
          id="ID 2"
          list={null}
          name="ID 2"
          onBlur={null}
          onChange={null}
          onFocus={null}
          onKeyPress={null}
          onKeyUp={null}
          pattern={null}
          placeholder="Placeholder 2"
          rows=""
          type="text"
        />
      </section>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 hxVKcs TextInput__TextInputContainer-sc-1fep8p8-0 cXvfWM"
        id="ID 3_container"
        rows={null}
      >
        <input
          autoComplete="off"
          className="TextInput__Input-sc-1fep8p8-3 eFFcpr"
          cols=""
          disabled={false}
          id="ID 3"
          list={null}
          name="ID 3"
          onBlur={null}
          onChange={null}
          onFocus={null}
          onKeyPress={null}
          onKeyUp={null}
          pattern={null}
          placeholder="Placeholder 3"
          rows=""
          type="text"
        />
      </section>
    </section>
    <p
      className="Typography__Paragraph-sc-19auepv-3 dAoeoh"
      fontSize="0.75rem"
      fontWeight={400}
      id={null}
      letterSpacing="0.4px"
    >
      Hang in there, buddy, I'm here to help!
    </p>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 hxVKcs InputBlock__TextInputContainer-sc-1bjt58v-0 FyZOH"
    id={null}
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 jOsHCn"
      cursor="pointer"
      fontSize="0.875rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="1px"
      onClick={null}
    >
      Input Block ( Pre-Label )
    </label>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 bDHtxU"
      id={null}
      rows={null}
    >
      <div
        className="InputBlock__PrePost-sc-1bjt58v-1 jzcrsP"
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 jOsHCn"
          cursor="pointer"
          fontSize="0.875rem"
          fontWeight={400}
          htmlFor={null}
          letterSpacing="1px"
          onClick={null}
        >
          prefix
        </label>
      </div>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 hxVKcs TextInput__TextInputContainer-sc-1fep8p8-0 cXvfWM"
        id="ID 1_container"
        rows={null}
      >
        <input
          autoComplete="off"
          className="TextInput__Input-sc-1fep8p8-3 eFFcpr"
          cols=""
          disabled={false}
          id="ID 1"
          list={null}
          name="ID 1"
          onBlur={null}
          onChange={null}
          onFocus={null}
          onKeyPress={null}
          onKeyUp={null}
          pattern="[A-Za-z]{3}"
          placeholder="Placeholder 1"
          rows=""
          type="text"
        />
      </section>
    </section>
    <p
      className="Typography__Paragraph-sc-19auepv-3 dAoeoh"
      fontSize="0.75rem"
      fontWeight={400}
      id={null}
      letterSpacing="0.4px"
    >
      Hang in there, buddy, I'm here to help!
    </p>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 hxVKcs InputBlock__TextInputContainer-sc-1bjt58v-0 FyZOH"
    id={null}
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 jOsHCn"
      cursor="pointer"
      fontSize="0.875rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="1px"
      onClick={null}
    >
      Input Block ( Post-Label )
    </label>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 ihBwc"
      id={null}
      rows={null}
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 hxVKcs TextInput__TextInputContainer-sc-1fep8p8-0 cXvfWM"
        id="ID 1_container"
        rows={null}
      >
        <input
          autoComplete="off"
          className="TextInput__Input-sc-1fep8p8-3 eFFcpr"
          cols=""
          disabled={false}
          id="ID 1"
          list={null}
          name="ID 1"
          onBlur={null}
          onChange={null}
          onFocus={null}
          onKeyPress={null}
          onKeyUp={null}
          pattern="[A-Za-z]{3}"
          placeholder="Placeholder 1"
          rows=""
          type="text"
        />
      </section>
      <div
        className="InputBlock__PrePost-sc-1bjt58v-1 jzcrsP"
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 jOsHCn"
          cursor="pointer"
          fontSize="0.875rem"
          fontWeight={400}
          htmlFor={null}
          letterSpacing="1px"
          onClick={null}
        >
          postfix
        </label>
      </div>
    </section>
    <p
      className="Typography__Paragraph-sc-19auepv-3 dAoeoh"
      fontSize="0.75rem"
      fontWeight={400}
      id={null}
      letterSpacing="0.4px"
    >
      Hang in there, buddy, I'm here to help!
    </p>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 hxVKcs InputBlock__TextInputContainer-sc-1bjt58v-0 FyZOH"
    id={null}
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 jOsHCn"
      cursor="pointer"
      fontSize="0.875rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="1px"
      onClick={null}
    >
      Input Block ( Pre-Icon )
    </label>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 iLOhIl"
      id={null}
      rows={null}
    >
      <div
        className="InputBlock__PrePost-sc-1bjt58v-1 jzcrsP"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-user fa-w-14 fa-fw Icon__StyledIcon-sc-1oa9m1v-1 crFXws"
          color={null}
          data-icon="user"
          data-prefix="far"
          focusable="false"
          fontSize="inherit"
          id={null}
          role="img"
          style={Object {}}
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M313.6 304c-28.7 0-42.5 16-89.6 16-47.1 0-60.8-16-89.6-16C60.2 304 0 364.2 0 438.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-25.6c0-74.2-60.2-134.4-134.4-134.4zM400 464H48v-25.6c0-47.6 38.8-86.4 86.4-86.4 14.6 0 38.3 16 89.6 16 51.7 0 74.9-16 89.6-16 47.6 0 86.4 38.8 86.4 86.4V464zM224 288c79.5 0 144-64.5 144-144S303.5 0 224 0 80 64.5 80 144s64.5 144 144 144zm0-240c52.9 0 96 43.1 96 96s-43.1 96-96 96-96-43.1-96-96 43.1-96 96-96z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 hxVKcs TextInput__TextInputContainer-sc-1fep8p8-0 cXvfWM"
        id="ID 1_container"
        rows={null}
      >
        <input
          autoComplete="off"
          className="TextInput__Input-sc-1fep8p8-3 eFFcpr"
          cols=""
          disabled={false}
          id="ID 1"
          list={null}
          name="ID 1"
          onBlur={null}
          onChange={null}
          onFocus={null}
          onKeyPress={null}
          onKeyUp={null}
          pattern="[A-Za-z]{3}"
          placeholder="Placeholder 1"
          rows=""
          type="text"
        />
      </section>
    </section>
    <p
      className="Typography__Paragraph-sc-19auepv-3 dAoeoh"
      fontSize="0.75rem"
      fontWeight={400}
      id={null}
      letterSpacing="0.4px"
    >
      Hang in there, buddy, I'm here to help!
    </p>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 hxVKcs InputBlock__TextInputContainer-sc-1bjt58v-0 FyZOH"
    id={null}
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 jOsHCn"
      cursor="pointer"
      fontSize="0.875rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="1px"
      onClick={null}
    >
      Input Block ( Post-Icon )
    </label>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 cObvfV"
      id={null}
      rows={null}
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 hxVKcs TextInput__TextInputContainer-sc-1fep8p8-0 cXvfWM"
        id="ID 1_container"
        rows={null}
      >
        <input
          autoComplete="off"
          className="TextInput__Input-sc-1fep8p8-3 eFFcpr"
          cols=""
          disabled={false}
          id="ID 1"
          list={null}
          name="ID 1"
          onBlur={null}
          onChange={null}
          onFocus={null}
          onKeyPress={null}
          onKeyUp={null}
          pattern="[A-Za-z]{3}"
          placeholder="Placeholder 1"
          rows=""
          type="text"
        />
      </section>
      <div
        className="InputBlock__PrePost-sc-1bjt58v-1 jzcrsP"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-user fa-w-14 fa-fw Icon__StyledIcon-sc-1oa9m1v-1 crFXws"
          color={null}
          data-icon="user"
          data-prefix="far"
          focusable="false"
          fontSize="inherit"
          id={null}
          role="img"
          style={Object {}}
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M313.6 304c-28.7 0-42.5 16-89.6 16-47.1 0-60.8-16-89.6-16C60.2 304 0 364.2 0 438.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-25.6c0-74.2-60.2-134.4-134.4-134.4zM400 464H48v-25.6c0-47.6 38.8-86.4 86.4-86.4 14.6 0 38.3 16 89.6 16 51.7 0 74.9-16 89.6-16 47.6 0 86.4 38.8 86.4 86.4V464zM224 288c79.5 0 144-64.5 144-144S303.5 0 224 0 80 64.5 80 144s64.5 144 144 144zm0-240c52.9 0 96 43.1 96 96s-43.1 96-96 96-96-43.1-96-96 43.1-96 96-96z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
    </section>
    <p
      className="Typography__Paragraph-sc-19auepv-3 dAoeoh"
      fontSize="0.75rem"
      fontWeight={400}
      id={null}
      letterSpacing="0.4px"
    >
      Hang in there, buddy, I'm here to help!
    </p>
  </section>
</section>
`;
